Fixed BG on mobile
image wouldnt fill screen

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -165,13 +165,17 @@ app {
 
 @media (max-width: 767.98px) {
 
+    html, body {
+       background-attachment: fixed; 
+    }
+
     .main .content {
         position:relative;
         margin: auto;
         top: auto;
         left: auto;
         right: auto;
-        bottom: auto;
+        bottom: 0;
     }
 
     .main .top-row:not(.auth) {
